Mostly check your answer additions

--- a/app/views/enforcement/v1/additional-people/add-person.html
+++ b/app/views/enforcement/v1/additional-people/add-person.html
@@ -38,8 +38,8 @@
       </p>
 
       {{ govukInput({
-        id: "enf-"+version+"-addedperson",
-        name: "enf-"+version+"-addedperson",
+        id: "enforcement-added-person",
+        name: "enforcement-added-person",
         label: {
           text: "Full name"
         },
