--- a/app/views/enforcement/v1/appeal-site/site-interest.html
+++ b/app/views/enforcement/v1/appeal-site/site-interest.html
@@ -48,38 +48,38 @@
 
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="interest" name="interest" type="radio" value="owner" aria-describedby="interest-item-hint">
-                <label class="govuk-label govuk-radios__label" for="interest">
+                <input class="govuk-radios__input" id="enforcement-interest" name="enforcement-interest" type="radio" value="Owner" aria-describedby="enforcement-interest-item-hint">
+                <label class="govuk-label govuk-radios__label" for="enforcement-interest">
                   Owner
                 </label>
-                <div id="interest-item-hint" class="govuk-hint govuk-radios__hint">
+                <div id="enforcement-interest-item-hint" class="govuk-hint govuk-radios__hint">
                   I own all of the land or building.
                 </div>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="interest-2" name="interest" type="radio" value="mortgagee" aria-describedby="interest-2-item-hint">
-                <label class="govuk-label govuk-radios__label" for="interest-2">
+                <input class="govuk-radios__input" id="enforcement-interest-2" name="enforcement-interest" type="radio" value="Mortgagee" aria-describedby="enforcement-interest-2-item-hint">
+                <label class="govuk-label govuk-radios__label" for="enforcement-interest-2">
                   Mortgagee
                 </label>
-                <div id="interest-2-item-hint" class="govuk-hint govuk-radios__hint">
+                <div id="enforcement-interest-2-item-hint" class="govuk-hint govuk-radios__hint">
                   I’m a lender in the mortgage for the land or building.
                 </div>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="interest-3" name="interest" type="radio" value="mortgagee" aria-describedby="interest-3-item-hint">
-                <label class="govuk-label govuk-radios__label" for="interest-3">
+                <input class="govuk-radios__input" id="enforcement-interest-3" name="enforcement-interest" type="radio" value="Tenant" aria-describedby="enforcement-interest-3-item-hint">
+                <label class="govuk-label govuk-radios__label" for="enforcement-interest-3">
                   Tenant
                 </label>
-                <div id="interest-3-item-hint" class="govuk-hint govuk-radios__hint">
+                <div id="enforcement-interest-3-item-hint" class="govuk-hint govuk-radios__hint">
                   I occupy the land or building rented from a landlord.
                 </div>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="interest-4" name="interest" type="radio" value="mortgagee" aria-describedby="interest-4-item-hint">
-                <label class="govuk-label govuk-radios__label" for="interest-4">
+                <input class="govuk-radios__input" id="enforcement-interest-4" name="enforcement-interest" type="radio" value="Relevant occupier" aria-describedby="enforcement-interest-4-item-hint">
+                <label class="govuk-label govuk-radios__label" for="enforcement-interest-4">
                   Relevant occupier
                 </label>
-                <div id="interest-4-item-hint" class="govuk-hint govuk-radios__hint">
+                <div id="enforcement-interest-4-item-hint" class="govuk-hint govuk-radios__hint">
                   I occupy the land or building with the owner’s consent.
                 </div>
               </div>
@@ -87,8 +87,8 @@
                 or
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="interest-5" name="interest" type="radio" value="none">
-                <label class="govuk-label govuk-radios__label" for="interest-5">
+                <input class="govuk-radios__input" id="enforcement-interest-5" name="enforcement-interest" type="radio" value="none">
+                <label class="govuk-label govuk-radios__label" for="enforcement-interest-5">
                   I’m none of these
                 </label>
               </div>
