--- a/app/views/enforcement/v1/contact-details/who-are-you.html
+++ b/app/views/enforcement/v1/contact-details/who-are-you.html
@@ -34,8 +34,8 @@
       </span>
 
       {{ govukRadios({
-        idPrefix: "enf-"+version+"-whoareyou",
-        name: "identity",
+        idPrefix: "enforcement-identity",
+        name: "enforcement-identity",
         fieldset: {
           legend: {
             text: title,
