--- a/app/views/enforcement/v1/contact-details/who-was-served.html
+++ b/app/views/enforcement/v1/contact-details/who-was-served.html
@@ -1,4 +1,4 @@
-{% extends "layouts/appellant-submission/v13.html" %}
+{% extends "layout.html" %}
 
 {% set title = "Who was served the enforcement notice?" %}
 
@@ -34,25 +34,26 @@
         </h1>
 
         {{ govukInput({
-          id: "appealsub-"+version+"-aboutyou-yourname",
-          name: "appealsub-"+version+"-aboutyou-yourname",
+          id: "enforcement-notice-name",
+          name: "enforcement-notice-name",
           label: {
             text: "Full name"
           },
           hint: {
             html: hintHtml
           },
-          classes: "govuk-!-width-two-thirds"
+          classes: "govuk-!-width-two-thirds",
+          value: data["enforcement-notice-name"]
         }) }}
 
         {{ govukInput({
-          id: "appealsub-"+version+"-aboutyou-company",
-          name: "appealsub-"+version+"-aboutyou-company",
+          id: "enforcement-notice-company",
+          name: "enforcement-notice-company",
           label: {
             text: "Company name (optional)"
           },
           classes: "govuk-!-width-two-thirds",
-          value: data["appealsub-"+version+"-aboutyou-company"]
+          value: data["enforcement-notice-company"]
         }) }}
 
         <div class="govuk-button-group">
