--- a/app/views/enforcement/v1/grounds/late-application.html
+++ b/app/views/enforcement/v1/grounds/late-application.html
@@ -34,8 +34,8 @@
       </span>
 
       {{ govukRadios({
-        idPrefix: "enforcement-late-applcation",
-        name: "enforcement-late-applcation",
+        idPrefix: "enforcement-late-application",
+        name: "enforcement-late-application",
         fieldset: {
           legend: {
             text: title,
@@ -45,11 +45,11 @@
         },
         items: [
           {
-            value: "yes",
+            value: "Yes",
             text: "Yes, I submitted a planning application after the local planning department issued the enforcement notice"
           },
           {
-            value: "no",
+            value: "No",
             text: "No, I did not submit a planning application after the local planning department issued the enforcement notice"
           }
         ]
