Fix to variable on planning obligation upload

--- a/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation-upload.html
+++ b/app/views/appellant-submission/v15/listed-building/appeal-documents/planning-obligation-upload.html
@@ -1,12 +1,12 @@
-{% if data["appealsub-v14-appealdocs-planningobligation-status"] == "Finalised and ready to submit" %}
+{% if data["appealsub-v15-appealdocs-planningobligation-status"] == "Finalised and ready to submit" %}
   {% set pageref = "LB-APP-008-AS15" %}
 {% endif %}
-{% if data["appealsub-v14-appealdocs-planningobligation-status"] == "In draft" %}
+{% if data["appealsub-v15-appealdocs-planningobligation-status"] == "In draft" %}
   {% set pageref = "LB-APP-009-AS15" %}
 {% endif %}
-{% if data["appealsub-v14-appealdocs-planningobligation-status"] == "Not started yet" %}
+{% if data["appealsub-v15-appealdocs-planningobligation-status"] == "Not started yet" %}
   {% set pageref = "LB-APP-010-AS15" %}
-{% endif %}AS15
+{% endif %}
 {% extends "layouts/appellant-submission/v15.html" %}
 
 {% block pageTitle %}
